force-app/main/default/objects/RCC__c/fields/Other_advisory_services_Please_describe__c.field-meta.xml
<CustomField>
    <fullName>Other_advisory_services_Please_describe__c</fullName>
    <description>Other advisory services (Please describe)</description>
    <inlineHelpText>Other advisory services (Please describe)</inlineHelpText>
    <label>Other advisory services (Please describe</label>
    <length>255</length>
    <type>Text</type>
</CustomField>