force-app/main/default/objects/RCC__c/fields/Others_Services_Please_describe__c.field-meta.xml
<CustomField>
    <fullName>Others_Services_Please_describe__c</fullName>
    <description>Others Services (Please describe)</description>
    <inlineHelpText>Others Services (Please describe)</inlineHelpText>
    <label>Others Services (Please describe)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>