force-app/main/default/objects/RCC__c/fields/OwnedInWholeOrInPartByPEVC__c.field-meta.xml
<CustomField>
    <fullName>OwnedInWholeOrInPartByPEVC__c</fullName>
    <description>Is the entity owned in whole or in part by one or more private Equity / venture capital (PE/VC) Group(s)?</description>
    <inlineHelpText>Is the entity owned in whole or in part by one or more private Equity / venture capital (PE/VC) Group(s)?</inlineHelpText>
    <label>Owned In Whole Or In Part By (PE/VC)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes, the entity is owned by a PE/VC group</fullName>
            </value>
            <value>
                <fullName>No, the entity is not owned by a PE/VC group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>