force-app/main/default/objects/RCC__c/fields/Provision_of_Audit_Accountancy_Training__c.field-meta.xml
<CustomField>
    <fullName>Provision_of_Audit_Accountancy_Training__c</fullName>
    <description>Provision of audit training, accountancy and software training.</description>
    <inlineHelpText>Provision of audit training, accountancy and software training.</inlineHelpText>
    <label>Provision of Audit, Accountancy Training</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Provision of audit training, accountancy and software training.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>