force-app/main/default/objects/RCC__c/fields/Recovery_and_Reorganisation__c.field-meta.xml
<CustomField>
    <fullName>Recovery_and_Reorganisation__c</fullName>
    <label>Recovery and Reorganisation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Recovery &amp; reorganization type - Restructuring</fullName>
            </value>
            <value>
                <fullName>Recovery &amp; reorganization type - Insolvency</fullName>
            </value>
            <value>
                <fullName>Recovery &amp; reorganization type - Debt advisory</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>