force-app/main/default/objects/RCC__c/fields/ResponseRequiredInCaseOfIRC__c.field-meta.xml
<CustomField>
    <fullName>ResponseRequiredInCaseOfIRC__c</fullName>
    <description>In case of IRC. What type of response is required?</description>
    <inlineHelpText>In case of IRC. What type of response is required?</inlineHelpText>
    <label>Response Required In Case Of IRC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Responses required only, if relationships are identified.</fullName>
            </value>
            <value>
                <fullName>Responses required, whether or not relationships are identified.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>