force-app/main/default/objects/RCC__c/fields/TargetEntityAdversePartyTransaction__c.field-meta.xml
<CustomField>
    <fullName>TargetEntityAdversePartyTransaction__c</fullName>
    <description>Adverse Party for Transaction Services.</description>
    <inlineHelpText>Adverse Party for Transaction Services.</inlineHelpText>
    <label>Target Entity/ Adverse Party</label>
    <length>255</length>
    <type>Text</type>
</CustomField>