force-app/main/default/objects/RCC__c/fields/TotalEstimatedFees__c.field-meta.xml
<CustomField>
    <fullName>TotalEstimatedFees__c</fullName>
    <description>What are the total estimated fees, ($US) for the client engagement</description>
    <inlineHelpText>What are the total estimated fees, ($US) for the client engagement</inlineHelpText>
    <label>Total Estimated Fees</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt;25000</fullName>
            </value>
            <value>
                <fullName>25000 - 100000</fullName>
            </value>
            <value>
                <fullName>100000 - 250000</fullName>
            </value>
            <value>
                <fullName>250000 - 1000000</fullName>
            </value>
            <value>
                <fullName>&gt; 1000000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>