force-app/main/default/objects/RCC__c/fields/Transaction_Services__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Services__c</fullName>
    <label>Transaction Services</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Transaction type - M&amp;A advisory</fullName>
            </value>
            <value>
                <fullName>Transaction type - Capital markets</fullName>
            </value>
            <value>
                <fullName>Transaction type - Financial due diligence</fullName>
            </value>
            <value>
                <fullName>Transaction type - Operational deal services</fullName>
            </value>
            <value>
                <fullName>Transaction type - Valuations</fullName>
            </value>
            <value>
                <fullName>Transaction type - Commercial and strategic intelligence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>