force-app/main/default/objects/RCC__c/fields/Vendor_Relationship_To_Be_Reported__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Relationship_To_Be_Reported__c</fullName>
    <description>What type of vendor relationship, do you want to reported.</description>
    <inlineHelpText>What type of vendor relationship, do you want to reported.</inlineHelpText>
    <label>Vendor Relationship To Be Reported</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Report only significant vendor relationships</fullName>
            </value>
            <value>
                <fullName>Report all vendor relationships</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>