force-app/main/default/objects/RCC__c/fields/VendorRelationshipToBeReported__c.field-meta.xml
<CustomField>
    <fullName>VendorRelationshipToBeReported__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>What type of Vendor relationship, do you want to reported</description>
    <inlineHelpText>What type of Vendor relationship, do you want to reported</inlineHelpText>
    <label>Vendor Relationship To Be Reported</label>
    <referenceTo>Vendor__c</referenceTo>
    <relationshipLabel>RCCs</relationshipLabel>
    <relationshipName>RCCs</relationshipName>
    <type>Lookup</type>
</CustomField>