force-app/main/default/objects/RCC__c/fields/WhatisEntitysLocalIndustry__c.field-meta.xml
<CustomField>
    <fullName>WhatisEntitysLocalIndustry__c</fullName>
    <description>What is the entity&apos;s local industry (if different than global industry sectors)?</description>
    <inlineHelpText>What is the entity&apos;s local industry (if different than global industry sectors)?</inlineHelpText>
    <label>What Is Entity&apos;s Local Industry</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>